--- a/inc/css/style.css
+++ b/inc/css/style.css
@@ -43,6 +43,12 @@ a{
 a:hover, a:focus{
     text-decoration:none;
 }
+
+input[type=text], input[type=password]{
+    color: #313131;
+    padding: 0px 12px;
+}
+
 h3{
     font-size: 13pt;
     line-height: none;
@@ -1675,6 +1681,7 @@ color:#FFFFFF;
             left: 0;
             right: 0;
             bottom: 0;
+            overflow: auto;
         }
         
 /*Dock*/
@@ -2317,7 +2324,11 @@ del.bar{
 
 
 .profile{
-    
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
 }
 
 .profile header{
@@ -2350,10 +2361,17 @@ del.bar{
 
 .profileNavLeft{
     width: 140px!important;
-    background-color:  #37474f;
+    background-color: #607d8b;
     margin: 0;
     position:absolute;
     top:140px;
+    height:700px;
+}
+
+.profileNavLeft img{
+    width: 15px;
+    margin-right: 5px;
+    margin-top: -5px;
 }
 
 .profileMain{
@@ -2370,6 +2388,8 @@ del.bar{
     height: 40px;
     line-height: 40px;
     cursor: pointer;
+    background: #37474f;
+    overflow: hidden;
 }
 .profileNavLeft li .icon{
     width: 21px;
@@ -2380,7 +2400,6 @@ del.bar{
 
 .profileNavLeft li.openChat{
     background-color:  #607d8b;
-    background-color: #607d8b;
     height: auto;
     display: block;
     padding-top: 15px;
@@ -2401,6 +2420,7 @@ del.bar{
 .profileMainNav{
     border-bottom: 1px solid #dcdcdc;
     height: 40px;
+    margin:0;
 }
 
 .profileMainNav li{
@@ -2419,37 +2439,58 @@ del.bar{
     background-color:  #00bcd4;
 }
 
+.profileMain .conntent{
+    height:650px;
+}
+
 .profileMain .profile_tab{
     display:none;
 }
 
-.profileMain .friends_tab li{
+.profileMain .profile_tab li{
     float: left;
     width: 50%;
 }
 
-.profileMain .friends_tab li .userPicture{
-    border-radius:0!important;
-    width: 100px!important;
-    height: 100px!important;
+.profileMain .profile_tab li .icon-group{
+    height: 75px!important;
+    width: 75px!important;
+    display: inline-block;
+    float: left;
 }
 
-.profileMain .friends_tab li>div{
+.profileMain .profile_tab li .userPicture{
+    border-radius: 0!important;
+    width: 75px!important;
+    height: 75px!important;
+    border: none;
+    margin-right: 5px;
+}
+
+.profileMain .profile_tab li>div{
     background-color: #eceff1;
     margin:10px;
-    height: 100px;
+    height: 75px;
+    position: relative;
 }
 
-.profileMain .friends_tab li>div .username{
+.profileMain .profile_tab li>div span{
     display:block;
 }
-.profileMain .friends_tab li>div .realname{
-    display:block;
-}
-.profileMain .friends_tab li>div .itemSettingsButton{
+.profileMain .profile_tab li>div .itemSettingsButton{
+    margin-right: -6px;
     position: absolute;
-    right: 5px;
-    bottom: 5px;
+    bottom: 8px;
+    right: 0;
+}
+
+.info_tab span label{
+    width: 80px;
+}
+
+
+.info_tab span {
+display: block;
 }
 
 
