icons and layout (css)

--- a/inc/css/guest.css
+++ b/inc/css/guest.css
@@ -3,6 +3,10 @@
     height: 30px;
 }
 
+.scoreButton .counter {
+    margin-left: 65px;
+}
+
 #offlineHeader{
     position: absolute;
     top: 0px;
