--- a/inc/css/style.css
+++ b/inc/css/style.css
@@ -60,7 +60,7 @@ h3{
 
 /*describes the drag and drop window */
 .fenster {
-    padding: 0px 0 35px 0px;
+    padding: 0px 0 0 0px;
     position: absolute;
     z-index: 1;
     background: #FFF;
@@ -2343,9 +2343,9 @@ del.bar{
 
 .profile header .userPicture{
     border-radius: 0!important;
-    width:140px!important;
-    height:140px!important;
-    
+    width: 140px!important;
+    height: 140px!important;
+    border: none!important;
 }
 
 .profile header .main{
@@ -2832,7 +2832,7 @@ Released under the MIT License <http://www.opensource.org/licenses/mit-license.p
 		z-index: 99999;
 		position: absolute;
 		height: 250px;
-		padding: 10px;
+		padding: 0 10px;
 		right: 5px;
 		left: 0;
 		right: 0;
@@ -2851,7 +2851,7 @@ Released under the MIT License <http://www.opensource.org/licenses/mit-license.p
 	
 	#dashBoard.up{
 		top: 0;
-margin: 0;
+                margin: 0;
 	}
 	
 	#dashBoard footer{
@@ -2881,12 +2881,6 @@ margin: 0;
 	.dashBox:hover footer{
 		display: block;
 	}
-	
-	.dashBox:first-of-type{
-		-webkit-box-shadow: inset 5px 5px 9px 12px rgba(0, 0, 0, 0.35); /* WebKit */
-		-moz-box-shadow: inset 5px 5px 9px 12px rgba(0, 0, 0, 0.35); /* Firefox */
-		box-shadow: inset 5px 5px 9px 12px rgba(0, 0, 0, 0.35); /* Standard */
-	}
 
 	.dashBox{
             color: #FFF;
@@ -2894,19 +2888,21 @@ margin: 0;
             margin: 0 4px;
             position: relative;
             float: left;
-            height: 200px;
+            height: 250px;
 	}
 	
 	.dashBox .content{
             overflow: auto;
-            height: 144px;
+            height: 190px;
 	}
 	
 	.dashBox header{
-            padding: 5px;
+            padding: 0;
+            padding-top: 10px;
+            padding-bottom: 10px;
             font-size: 22px;
             line-height: 15px;
-            font-weight:300;
+            font-weight: 300;
         }
 	
 	.dashBox footer{
@@ -2992,17 +2988,17 @@ margin: 0;
                 }
             
                 #dashBoard li{
-					padding: 5px;
-					padding-top: 12px;
-					padding-bottom: 12px;
-					cursor: pointer;
-					float: left;
-					font-size: 14px;
-                                        width:130px!important;
-                                        height: 40px!important;
-                                        background: #1a1b1b;
-                                        margin-bottom: 15px;
-                                        margin-right: 15px;
+                    padding: 5px;
+                    padding-bottom: 12px;
+                    cursor: pointer;
+                    float: left;
+                    font-size: 14px;
+                    line-height: 30px;
+                    width: 130px!important;
+                    height: 40px!important;
+                    background: #1a1b1b;
+                    margin-bottom: 15px;
+                    margin-right: 15px;
                 }
                 
                 #dashBoard tr{
@@ -3021,8 +3017,8 @@ margin: 0;
                 }
                 
                 #dashBoard a:link, #dashBoard a:visited{
-					color:rgba(115, 115, 115, 1);
-									}
+					color:#FFF;
+		}
                 
                 #dashBoard #appBox li{
                     width:130px!important;
