--- a/inc/css/style.css
+++ b/inc/css/style.css
@@ -1165,37 +1165,24 @@ border-bottom: 1px solid #292929;
 
 	.openFile header{
 		height:40px;
-		padding-top: 0px;
 		cursor: default;
-	}
-	
-	.openFile header > img{
-		float: left;
-		margin-top: 10px;
-		margin-left: 5px;
+                vertical-align: middle;
 	}
 	
 	.openFile header .title{
-		float: left;
-		font-size: 16pt;
-		margin-top: 7px;
-		margin-left: 5px;
-		overflow: hidden;
-		max-width: 30%;
-		line-height: 30px;
-		height: 30px;
-		vertical-align: bottom;
+            color:  #313131;
+            font-size: 16px; /* Näherungswert aufgrund einer Schriftersetzung */
+            font-weight: 150;
+            text-align: left;
 	}
-	.openFile header span{
-		float:right;
-		margin-top: 9px;
-		margin-right:5px;
+	.openFile header .icon{
+            width: 24px;
+            height: 24px;
+	}
+	.openFile header .itemSettingsButton{
 	}
 	
 	.openFile header span>span{
-		float:none;
-		margin-top: 0;
-		margin-right:0;
 	}
 
             .uffViewerMain{
@@ -1549,6 +1536,13 @@ color:#FFFFFF;
 	background-image:-moz-linear-gradient(-90deg, rgb(238, 238, 238), rgb(204, 204, 204));
         background-image:-ie-linear-gradient(-90deg, rgb(238, 238, 238), rgb(204, 204, 204));
         color: #3b4043;
+}
+.white-gradient {
+    background-color: rgb(255, 255, 255);font-family: Ubuntu;
+    color:  #313131;
+    font-size: 16px; /* Näherungswert aufgrund einer Schriftersetzung */
+    font-weight: 300;
+    text-align: left;
 }
 
 .border-box {
@@ -2080,7 +2074,7 @@ font-weight:bold;
 }
 
 .scoreButton{
-    margin-left:-7px;
+    margin-left:-15px;
 }
 
 .scoreButton .icon{
@@ -2090,7 +2084,8 @@ font-weight:bold;
 }
 
 .scoreButton .counter{
-width: 26px;
+width: auto;
+min-width: 26px;
 border: 2px solid #a0a0a0;
 border-radius: 0;
 line-height: 18px;
