--- a/inc/css/style.css
+++ b/inc/css/style.css
@@ -2425,7 +2425,7 @@ del.bar{
 
 .commentRow{
     background: #ededed;
-    height: 37px;
+    height: 50px;
 	padding: 10px 5px;
 }
 
@@ -2438,10 +2438,13 @@ del.bar{
 }
 
 .commentField{
-    font-size: 15px;
-	margin-bottom: 0px!important;
-	height: 17px!important;
-	width:85%!important;
+    font-size: 16px;
+	
+	
+    margin-top: -2px;
+    height: 35px!important;
+	
+    width:85%!important;
 }
 
 .subComment{
