status for Installation recreated files renamed for removal improvements in comments,settings and groups js classes separated from functions.js

--- a/inc/css/style.css
+++ b/inc/css/style.css
@@ -2629,7 +2629,8 @@ del.bar{
 .profileMain .profile_tab li>div, .grayList li>div{
     background-color: #eceff1;
     margin:10px;
-    height: 75px;
+    min-height: 35px;
+    max-height: 75px;
     position: relative;
 }
 
