--- a/inc/css/style.css
+++ b/inc/css/style.css
@@ -1017,10 +1017,14 @@ color: #FFF;
     padding: 15px;
 }
 
+.feedEntry .icon-comment{
+    margin-top: 5px;
+}
+
 .feedEntry .itemSettingsButton{
     position: absolute;
-    right: 35px;
-    margin-top: 4px;
+    right: 3px;
+    margin-top: 1px;
 }
 
 #feedInput{
@@ -3095,7 +3099,7 @@ margin-bottom: 3px;
 	}
         
         .dashBox footer .white-plus{
-            margin-bottom: -10px;
+            margin-bottom: 0px!important;
         }
 	
 	.dashBox > div, .dashBox > ul {
