--- a/inc/css/style.css
+++ b/inc/css/style.css
@@ -10,11 +10,11 @@ html {
 body {
 	color: #313131;
 	font:normal print, arial,sans-serif;
-	font-family: print;
+	font-family: ubuntu;
 	font-style: normal;
 	line-height: 1.333em;
 	font-weight: 200!important;
-	font-size: 16px;
+	font-size: 14px;
 	font-variant: normal;
 	margin: 0;
 	padding: 0;
@@ -701,6 +701,47 @@ li.notHidden{
     background: linear-gradient(to bottom, #eaeaea 0%,#f2f2f2 100%); /* W3C */
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#eaeaea', endColorstr='#f2f2f2',GradientType=0 ); /* IE6-9 */
 }
+
+span.icons {
+    display: inline-block;
+    min-width: 21px
+}
+
+span.title {
+    display: inline-block;
+    width: 35%;
+    
+}
+
+span.date {
+    display: inline-block;
+    width: 15%;
+    
+}
+
+span.size {
+    display: inline-block;
+    width: 15%;
+    
+}
+
+span.buttons {
+    display: inline-block;
+    float: right;
+    width: 30%;
+    
+}
+
+span.heading {
+    display: block;
+    clear: both;
+    margin: 10px 0 10px 0;
+    color:  #00bcd4;
+    font-size: 20px;
+    font-weight: 300;
+    text-align: left;
+}
+
 
 .pepperSteakButton{
     height: 35px;
