--- a/inc/css/plugins.css
+++ b/inc/css/plugins.css
@@ -1,14 +1,15 @@
 @font-face {
-    font-family: 'print';
-    src: url('../fonts/printclearly-webfont.eot');
-    src: url('../fonts/printclearly-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/printclearly-webfont.woff') format('woff'),
-         url('../fonts/printclearly-webfont.ttf') format('truetype'),
-         url('../fonts/printclearly-webfont.svg#print_clearlyregular') format('svg');
+    font-family: 'ubuntu';
+    src: url('inc/fonts/ubuntumono-r-webfont.eot');
+    src: url('inc/fonts/ubuntumono-r-webfont.eot?#iefix') format('embedded-opentype'),
+         url('inc/fonts/ubuntumono-r-webfont.woff2') format('woff2'),
+         url('inc/fonts/ubuntumono-r-webfont.woff') format('woff'),
+         url('inc/fonts/ubuntumono-r-webfont.ttf') format('truetype'),
+         url('inc/fonts/ubuntumono-r-webfont.svg#ubuntu_monoregular') format('svg');
     font-weight: normal;
     font-style: normal;
-}
 
+}
 
 /*!
  * Bootstrap v3.3.1 (http://getbootstrap.com)
