--- a/inc/css/style.css
+++ b/inc/css/style.css
@@ -9,8 +9,8 @@ html {
 }
 body {
 	color: #313131;
-	font:normal print, arial,sans-serif;
-	font-family: print;
+	font:normal ubuntu, arial,sans-serif;
+	font-family: ubuntu;
 	font-style: normal;
 	line-height: 1.333em;
 	font-weight: 200!important;
@@ -766,7 +766,7 @@ span.heading {
     bottom: 0px;
     left: 0px;
     overflow: auto;
-    background: #dcdcdc;
+    background: #cfd8dc;
     color: #323232;
 }
 
@@ -1062,8 +1062,27 @@ color: #FFF;
     left: 0px;
     overflow: auto;
     background-color: #FFFFFF;
-    
-    
+}
+
+.feedEntry{
+    margin: 5px;
+    /* border: 1px solid #dcdcdc; */
+    min-width: 48%;
+    max-width: 350px;
+    float: left;
+    position: relative;  
+    -webkit-box-shadow: 4px 4px 11px 1px rgba(179,179,179,0.68); -moz-box-shadow: 4px 4px 11px 1px rgba(179,179,179,0.68); box-shadow: 4px 4px 11px 1px rgba(179,179,179,0.68);
+}
+
+.feedEntry:nth-child(odd)
+{
+    float: left;
+    clear: both;
+}
+.feedEntry:nth-child(even) 
+{
+    float: right;
+    margin-top: 10px;
 }
 
 .feedEntry .feedAttachment, .feedEntry .options, .feedEntry .commentLoadingArea, .feedEntry .feedContent{
@@ -1081,19 +1100,14 @@ color: #FFF;
 }
 
 #feedInput{
-	position: absolute;
-        
-	top: 10px;
-        
-        
-	right: 10px;
-	display: block;
-        
-	height: 40px;
-        
-	font-size: 25px;
+	        position: absolute;
+	        top: 10px;
+        right: 10px;
+        width: 200px;
+        height: 40px;
+        font-size: 25px;
         padding: 8px;
-        
+
 	resize: none;
 }
 
@@ -1482,16 +1496,28 @@ color: #FFF;
     
 }
 
-.chatMainFrame{
-top: 0px; right: 0px; bottom: 40px; left: 0px; width: 100%;
+
+.chatLeftFrame{
+    
+}
+
+.chatRightFrame{
+    position: absolute;
+    
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
 }
 
 .chatMainFrame header{
+	font-size: 24px;
 	position: absolute; 
 	top: 0px; 
 	right: 0px; 
 	left:0px; 
-	height:20px;
+	height: 60px;
+	border-bottom: 1px solid #dcdcdc;
 	cursor: default;
 }
 
@@ -1510,7 +1536,9 @@ top: 0px; right: 0px; bottom: 40px; left: 0px; width: 100%;
 }
 
 .chatMainFrame .dialoge{
-	position: absolute; top: 30px; right: 0px; bottom:40px; left: 0px; overflow: auto; padding-top: 15px;
+	position: absolute; 
+	top: 60px; right: 0px; 
+	bottom: 60px; left: 0px; overflow: auto; padding-top: 15px;
 }
 
 .dialoge .chatMessage{
@@ -1545,17 +1573,18 @@ top: 0px; right: 0px; bottom: 40px; left: 0px; width: 100%;
 
 
 #chat footer{
+	border-top: 1px solid #dcdcdc;
 	position:absolute; 
 	right: 0px; 
 	bottom: 0px; 
 	left: 0px; 
-	height:40px;
+	height: 60px;
 }
 
 #chat .chatInput{
 	width: 60%; 
 	margin-bottom: -1px; 
-	height: 19px;
+	height: 40px;
 	-o-border-radius: 0px;
 	-moz-border-radius: 0px;
 	-khtml-border-radius: 0px;
@@ -1839,7 +1868,7 @@ color:#FFFFFF;
             right: 0;
             padding: 0!important;
             z-index: 2;
-            background: #dcdcdc!important;
+            background: #cfd8dc!important;
             color: #313131;
             font-size: 16px;
             font-weight: 300;
@@ -1934,7 +1963,12 @@ color:#FFFFFF;
         vertical-align: bottom;
         width: 180px;
         height: 30px;
-    }    
+    
+        border: none;
+        padding-left: 7px;
+}
+
+input#searchField {}    
         
         #dock #clockDiv{
         	position: absolute;
@@ -1946,9 +1980,10 @@ color:#FFFFFF;
         }
         
         .dockPlayer{
+            display:none;
             position: absolute;
-            right: 210px;
-            bottom: 0;
+            right: 220px;
+            bottom: 3px;
             margin: 0;
             color: #FFF;
             line-height: 40px;
@@ -2518,6 +2553,7 @@ del.bar{
     background-color: #FFF;
     border: 1px solid #c9c9c9;
     
+    position: relative;
 }
 
 /* profile*/
@@ -3506,8 +3542,10 @@ margin-bottom: 3px;
                               margin-right: 2px;
 }
 			#calendarViewDetail #text{
-				width: 80px;
+				width: 110px;
 			}
+
+a#text {}
 			
 			#calendar #main>header{
 				height: 25px;
